# repl-mcp

./: .pre-commit-config.yaml  CLAUDE.md  INITIAL_PLAN.md  LICENSE  PLAN.md  README.md  pyproject.toml
.claude/skills/repl/: SKILL.md
src/repl_mcp/: __init__.py  __main__.py  app.py  auth.py  manager.py  models.py  server.py  terminal_widget.py
tests/: conftest.py  test_allowlist.py  test_manager.py  test_server.py
